--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,119 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1,
+h2,
+h3,
+p,
+a {
+  font-family: "Montserrat", serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header h1 {
+  font-size: 4rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/* Header - Nav Bar */
+.navbar .link-styles {
+  font-size: 17px;
+  text-decoration: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar .navbar-nav .link-styles:hover {
+  color: blue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+nav .navbar-toggler:focus {
+  box-shadow: none;
+}
+
+/* HomeScreen CSS */
+.home-page header {
+  background-image: linear-gradient(rgba(5, 10, 35, 0.75), rgba(5, 10, 35, 0.75)), url(../src/utils/images/home.png);
+
+
+}
+
+header {
+  background-size: cover;
+  background-position: center;
+}
+
+.blog-section {
+  background-image: linear-gradient(rgba(5, 10, 35, 0.75), rgba(5, 10, 35, 0.75)),
+    url(../src/utils/images/businessman-working-laptop.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.scale-hover-effect {
+  transition: transform .5s ease;
+}
+
+.scale-hover-effect:hover {
+  transform: scale(1.05);
+}
+/* Accordion */
+.faq-section,
+.accordion {
+  width: 75%;
+}
+
+.accordion .accordion-button:focus,
+.accordion .accordion-button:not(.collapsed) {
+  box-shadow: none;
+}
+
+.accordion .accordion-button:not(.collapsed) {
+  background-color: lightblue;
+  color: white;
+}
+
+.accordion .accordion-button:not(.collapsed)::after {
+  filter: invert();
+}
+
+
+/* Footer */
+.footer-social-icons span:hover .fa-cons {
+  fill: blue;
+}
+
+.footer-navigation li:hover {
+  color: maroon;
+}
+
+/* media */
+@media only screen and (max-width: 992px) {
+  #basic-navbar-nav {
+    background-color: white;
+    padding: 10px 20px;
+    border-radius: 0.375rem;
   }
-  to {
-    transform: rotate(360deg);
+
+    .navbar .link-styles {
+      color: black;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  header h1 {
+    font-size: 3rem;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  header h1 {
+    font-size: 2rem;
+  }
+}
+
+/* accordion media */
+@media only screen and (max-width: 992px) {
+
+  .faq-section,
+  .accordion {
+    width: 100%;
   }
 }
